# gym-locm

./: .git-blame-ignore-revs  .gitignore  CITATION.cff  LICENSE  README.md  hello_world_battle.py  pyproject.toml  setup.py
.github/workflows/: publish-testpypi.yml  publish.yml
gym_locm/: __init__.py  agents.py  card_generator.py  cardlist.txt  engine.py  exceptions.py  helpers.py  runner.py  tester.py  util.py
gym_locm/algorithms/: __init__.py  mcts.py
gym_locm/c_engine/: engine.c  engine.h
gym_locm/engine/: __init__.py  action.py  card.py  card_generator.py  enums.py  game_state.py  phases.py  player.py
gym_locm/engine/resources/: baseline2.py  cardWeights.json  cardlist.txt  consistency-dataset-v1.2.txt  consistency-dataset-v1.5.txt
gym_locm/envs/: __init__.py  base_env.py  battle.py  constructed.py  draft.py  full_game.py  locm_env.py  rewards.py
gym_locm/experiments/: README.md  constructed-training.py  hyp-search.py  similarities.py  tournament.py  train-tabular.py  training-battle.py  training.py
gym_locm/experiments/papers/entcom-2022/: README.md
gym_locm/experiments/papers/entcom-2023/: README.md  base.yaml  di.yaml  dto.yaml  hyp-search.yaml  rs1.yaml  rs2.yaml
gym_locm/experiments/papers/sbgames-2022/: README.md  hyp-search.yaml
gym_locm/scripts/: pca-cards.py  runner.py
gym_locm/toolbox/: consistency-checker.py  pca-cards.py  policies.py  predictor.py  runner.py  tester.py  trainer.py  trainer_battle.py  trainer_draft.py
gym_locm/trained_models/: README.md
gym_locm/trained_models/greedy/history-1M/1st/: 1.json  2.json  3.json  4.json  5.json
gym_locm/trained_models/greedy/history-1M/2nd/: 1.json  2.json  3.json  4.json  5.json
gym_locm/trained_models/greedy/history-30k/1st/: 10.json  3.json  8.json
gym_locm/trained_models/greedy/history-30k/2nd/: 10.json  2.json  3.json  4.json  6.json  8.json  9.json
gym_locm/trained_models/greedy/history/1st/: 1.json  2.json  4.json  5.json  6.json  7.json  9.json
gym_locm/trained_models/greedy/history/2nd/: 1.json  5.json  7.json
gym_locm/trained_models/greedy/immediate-1M/1st/: 1.json  2.json  3.json  4.json  5.json
gym_locm/trained_models/greedy/immediate-1M/2nd/: 1.json  2.json  3.json  4.json  5.json
gym_locm/trained_models/greedy/immediate-30k/1st/: 5.json  7.json  8.json
gym_locm/trained_models/greedy/immediate-30k/2nd/: 1.json  4.json  5.json  6.json  8.json
gym_locm/trained_models/greedy/immediate/1st/: 1.json  10.json  2.json  3.json  4.json  6.json  9.json
gym_locm/trained_models/greedy/immediate/2nd/: 10.json  2.json  3.json  7.json  9.json
gym_locm/trained_models/greedy/lstm-1M/1st/: 1.json  2.json  3.json  4.json  5.json
gym_locm/trained_models/greedy/lstm-1M/2nd/: 1.json  2.json  3.json  4.json  5.json
gym_locm/trained_models/greedy/lstm-30k/1st/: 1.json  3.json  5.json  8.json  9.json
gym_locm/trained_models/greedy/lstm-30k/2nd/: 1.json  4.json
gym_locm/trained_models/greedy/lstm/1st/: 10.json  2.json  4.json  6.json  7.json
gym_locm/trained_models/greedy/lstm/2nd/: 10.json  2.json  3.json  5.json  6.json  7.json  8.json  9.json
gym_locm/trained_models/max-attack/history-1M/1st/: 1.json  2.json  3.json  4.json  5.json
gym_locm/util/: experiment.py  interleaved-self-play.py  predictor.py  runner.py  trainer.py  trainer2.py
(+85 files in other folders)
