[project]
name = "gym_locm"
version = "1.4.0"
description = "Gymnasium environments for Legends of Code and Magic, a collectible card game designed for AI research"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["reinforcement-learning", "collectible-card-games", "gym-environment", "legends-of-code-and-magic"]
authors = [{ name = "Ronaldo e Silva Vieira", email = "ronaldoesv@gmail.com" }]
dependencies = [
    "gymnasium>=1.2.3",
    "numpy>=2.4.1",
]

[project.urls]
repository = "https://github.com/ronaldosvieira/gym-locm"

[project.scripts]
locm-runner = "gym_locm.toolbox.runner:run"

[dependency-groups]
native-agent = [
    "pexpect>=4.9.0",
]
render = [
    "prettytable>=3.17.0",
    "sty>=1.0.6",
]
